# magicTest

./: AGENTS.md
cas/: __init__.py  basic_scenario_test.py  cas.md  cas.py  cas_analysis_checklist.md  data_struct.md  integration_test_cases.md  test_scenarios.md
cas/account/: __init__.py  __main__.py  account.md  account.py  account_test.py  test_cases.md
cas/cas/: __init__.py  __main__.py  cas.md  cas.py  cas_documentation.md
cas/endpoint/: __init__.py  __main__.py  (+5 more)
file/: __init__.py  basic_scenario_test.py  file.py  file_test.py  readme.md  test_case.py
mock/: __init__.py  __main__.py  common.py
platform/: monkey_test.py
session/: USAGE.md  __init__.py  common.py  session.py  test_optimized.py
vmi/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  MULTI_TENANT_README.md  NEXT_STEPS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_FIX_SUMMARY.md  TEST_FRAMEWORK_README.md  TEST_GUIDE.md  TEST_QUICK_REFERENCE.md  TEST_USAGE_GUIDE.md  VMI_MULTI_TENANT_FRAMEWORK_COMPLETION_REPORT.md  VMI实体定义和使用说明.md  __init__.py  __main__.py  aging_test.py  aging_test_simple.py  apply_config_template.py  base_test_case.py  concurrent_test.py  concurrent_test_simple.py  concurrent_test_v2.py  config_helper.py  conftest.py  debug_check_entities.py  debug_direct_api.py  debug_product_create.py  debug_product_info.py  debug_product_info_final.py  debug_sku_type.py  deploy_verification.py  deployment_verification_20260129_142059.json  fix_cas_import.py  fix_cas_imports.py  fix_cas_usage.py  fix_goods_info_tests.py  (+52 more)
vmi/cas_mock/: __init__.py  cas.py
vmi/credit/: __init__.py  __main__.py  credit.py  credit_report.py  credit_report_test.py  credit_reward.py  credit_reward_test.py  credit_test.py  reward_policy.py  reward_policy_test.py
vmi/docs/: config_examples.json
vmi/order/: __init__.py  goods_item_test.py  order_test.py
vmi/partner/: __init__.py  __main__.py  partner.py  partner_test.py
vmi/product/: __init__.py  __main__.py  product.py  product_info_test.py  product_test.py
vmi/sdk/: __init__.py  base.py  credit.py  credit_report.py  credit_reward.py  goods.py  goods_info.py  goods_item.py  member.py  order.py  partner.py  product.py  product_info.py  reward_policy.py  shelf.py  sku_info.py  status.py  stockin.py  stockout.py  store.py  warehouse.py
vmi/status/: __init__.py  status_test.py
vmi/store/: __init__.py  __main__.py  goods.py  goods_info_test.py  goods_test.py  member_test.py  stockin.py  stockin_test.py  stockout.py  stockout_test.py  store.py  store_test.py
vmi/warehouse/: __init__.py  __main__.py  shelf.py  shelf_test.py  warehouse.py  warehouse_test.py
(+35 files in other folders)
