[tool.pytest.ini_options]
# 测试发现配置
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# 命令行选项默认值
addopts = [
    "-v",           # 详细输出
    "--tb=short",   # 简短回溯
    "--strict-markers",  # 严格标记检查
    "--durations=10",    # 显示最慢的10个测试
]

# 测试标记定义
markers = [
    "slow: 长时间运行的测试",
    "integration: 集成测试",
    "performance: 性能测试",
    "concurrent: 并发测试",
    "aging: 老化测试",
    "session: 会话管理测试",
    "basic: 基础功能测试",
    "scenario: 业务场景测试",
    "smoke: 冒烟测试",
    "flaky: 不稳定的测试",
]

# 日志配置
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 覆盖率配置
[tool.coverage.run]
source = ["."]
omit = [
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "VMI测试覆盖率报告"

# 项目元数据
[project]
name = "vmi-test-framework"
version = "1.0.0"
description = "VMI测试框架 - 基于pytest的现代化测试架构"
authors = [{name = "VMI Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-html>=3.2.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.2.0",
    "pytest-rerunfailures>=12.0",
    "requests>=2.28.0",
    "colorama>=0.4.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
performance = [
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

# 构建系统
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"