[project]
name = "vmi-test-framework"
version = "1.0.0"
description = "VMI测试框架 - 基于pytest的现代化测试架构"
authors = [{name = "VMI Team"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pytest>=7.0.0",
    "pytest-html>=3.2.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.2.0",
    "pytest-rerunfailures>=12.0",
    "requests>=2.28.0",
    "colorama>=0.4.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
performance = [
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
